--- a/application.css
+++ b/application.css
@@ -2,7 +2,7 @@
 @import url(/jquery.qtip.min.css);
 
 body {
-	background: #fafafa;
+	background: #e6e6ff;
 	color: #5c5855;
 	font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif
 }
