--- a/application.css
+++ b/application.css
@@ -1,7 +1,7 @@
 @import url(/normalize.css);
 @import url(/jquery.qtip.min.css);
 
-@media only handheld {
+@media handheld {
 	.install-button {
 		height: 50%;
 		width: 50%;
