--- a/application.css
+++ b/application.css
@@ -1,7 +1,7 @@
 @import url(/normalize.css);
 @import url(/jquery.qtip.min.css);
 
-@media handheld {
+@media (max-width: 400px) {
 	.install-button {
 		display: inline-block;
 		width: 100%
